kubernetes/resources/tekton/trigger.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: el-route
  namespace: ci
spec:
  parentRefs:
    - sectionName: el-gateway
      name: el-gateway
  rules:
    - matches:
        - path:
            value: /eventlistener
      backendRefs:
        # This name is generated by the the EventListener config below.
        - name: el-nativelink-rebuild
          port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-webhook-access
  namespace: tekton-pipelines
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: tekton-pipelines-webhook
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: flux-system
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ci
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
  policyTypes:
  - Ingress
